tests/hevm/pass/transfer-simple/transfer-simple.act
contract Token

constructor(uint _totalSupply)

creates
  mapping(address => uint) balanceOf := [CALLER => _totalSupply]

transition balanceOf(address x) : uint256

updates
returns balanceOf[x]

transition transfer(uint256 value, address to) : uint256

iff

  CALLER != to ==> inRange(uint256, balanceOf[to] + value)
  inRange(uint256,balanceOf[CALLER] - value)

case CALLER != to:
  
  updates

    balanceOf := balanceOf[CALLER => balanceOf[CALLER] - value
                          , to => balanceOf[to] + value]

  returns 1

case CALLER == to:

  updates
  returns 1
