tests/hevm/fail/unspecced_storage/unspecced_storage.act
contract A

constructor()

creates

  mapping (uint=>uint) x := []

transition f() : uint256

// fails to mention the state update

updates
returns

  1
